--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                         </div>
                         <div class="icons icon-2">
                             <a href="">
-                                <img src="./img/main-menu.png" alt="">
+                                <!-- <img src="./img/main-menu.png" alt=""> -->
+                                <!-- <img src="./img/icons -2.png" alt=""> -->
+                                <img src="./img/menu-icon.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -68,12 +70,22 @@
                     <div class="cloud-5"><img src="./img/cloud (1).png" alt=""></div>
                     <div class="cloud-6"><img src="./img/cloud (1).png" alt=""></div>
                     <div class="cloud-7"><img src="./img/cloud (1).png" alt=""></div>
-                 
                 </div>
                 </div>
             </section>
     </header>
-
+<!--******* (✿◠‿◠) *******-->
+<!--*******   Footer   *******-->
+<footer class="footer-p1">
+    <div></div>
+    <p class="footer-p-p1">
+        More flexibility, freedom and choice! 
+    </p>
+    <div>
+        <a class="btn-p1 right-btn" href="">Book an Aircraft</a>
+        <a class="btn-p1 left-btn" href="">Book a Shared Flight</a>
+    </div>
+</footer>
 </section>
 
 </body>
